# dx-bulk

./: Cargo.toml  README.md  build.sh  snippets.sh
meta/: Cargo.toml
meta/src/: main.rs
output/: artifacts.json
output/xbulk/: xbulk-2.0.0.source.json  xbulk.abi.json  xbulk.imports.json  xbulk.mxsc.json
src/: xbulk.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
