[package]
name = "xbulk"
version = "2.0.0"
authors = ["Alessandro De Franceschi <info@defralcoding.it>"]
edition = "2021"
publish = false

[lib]
path = "src/xbulk.rs"

[dependencies.dharitri-sc]
version = "0.0.1"

[dependencies.dharitri-sc-modules]
version = "0.0.1"

[dev-dependencies.dharitri-sc-scenario]
version = "0.0.1"
